# image-mask-repainting

./: README.md  app.py  config.json  pyproject.toml
image_peeling/: canvas_frame.py  config_frame.py  img_file_manager.py  inference_sam2.py  inference_sgm.py  json_util.py  peeler.py
