[tool.poetry]
name = "image-mask-repainting"
version = "0.1.0"
description = ""
authors = ["mametch <18fmr41@ms.dendai.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
customtkinter = "^5.2.2"
black = "^24.8.0"
isort = "^5.13.2"
pillow = "^10.4.0"
setuptools = "^75.1.0"
torch = {version = "^2.4.1+cu124", source = "torch_cu124"}
torchvision = {version = "^0.19.1+cu124", source = "torch_cu124"}
torchaudio = {version = "^2.4.1+cu124", source = "torch_cu124"}
matplotlib = "^3.9.2"

[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
